crates/ir/tests/snapshots/lower_test__hkt__impl_vec_trait.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module hkt__impl_vec_trait

trait MyTrait[d9] { check(d9): String }
instance hkt__impl_vec_trait.MyTrait[Vec$$Var0] { check=MyTrait$$Vec$$Var0$$check }
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[s8]): List[s8]
import core/io/println as println(s): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
fn MyTrait$$Vec$$Var0$$check(v0: Dict[hkt__impl_vec_trait.MyTrait, e9], v1: Vec[e9]) -> ~String =
  "vec"
